--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
+    "vue-worker": "^1.2.1",
     "vuejs-dialog": "^1.4.1",
     "vuex": "^3.4.0"
   },
