--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@vue/cli": "^4.4.6",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "@vue/cli": "^4.4.6",
     "eslint-plugin-vue": "^6.2.2",
+    "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
