--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
+    "vue-async-computed": "^3.8.2",
     "vue-router": "^3.3.4",
     "vue-worker": "^1.2.1",
     "vuejs-dialog": "^1.4.1",
