--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
+    "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
     "vue-async-computed": "^3.8.2",
     "vue-router": "^3.3.4",
